[package]
edition = "2021"
name = "ton_vm"
version = "2.0.0"

[dependencies]
ahash = "0.8.3"
anyhow = "1"
hex = "0.4"
lazy_static = "1.4"
log = "0.4.8"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8"
sha2 = "0.9"
thiserror = "1.0.26"

everscale-types = { git = "https://github.com/broxus/everscale-types.git", features = ["stats"] }
everscale-crypto = "0.2"

[features]
fift_check = []
log_file = []
verbose = []